# executable_unet

./: .gitignore  CMakeLists.txt  README.md  config.ini  config3d.ini  config3dplusUS.ini  configxyz.ini  executable_unet.cpp  executable_unet_2D_Raw.cpp  executable_unet_3D.cpp  executable_unet_3D_FK.cpp  executable_unet_3D_FK_CF.cpp  executable_unet_3D_FK_CF_US.cpp  executable_unet_backu.cpp  executable_unet_final.cpp  executable_unet_two.cpp  sensor_pos.txt  sensor_pos_interp.txt
obsolete/: executable_unet_dummy.cpp
utils/: CMakeCache.txt  beamforming.cpp  beamforming.h  compute_distance_matrix.cpp  compute_distance_matrix.h  vrs_loader.cpp  vrs_loader.h
utils/export_model/: export_model_UNET.py  export_model_UNET_indiv.py
utils/export_model/11032025/: notes.txt  paper_reconstruction.ipynb
utils/pre_computed_distance/: compute_distance.py  compute_distance_3D.py  compute_distance_slice_US.py  export_USTXElements.py  export_sensor_pos.py
